[project]
name = "ichigo"
version = "0.1.0"
description = ""
authors = [
    {name = "Yoru-cyber",email = "carlosmendez170210@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "yt-dlp[default] (>=2025.2.19,<2026.0.0)",
]

[tool.poetry]
packages = [{include = "ichigo", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
